removed fixed comment div width
The fixed width overlapped the grey border in IE -
it is better to allow the divs to use their
default "full-width" property, which shows the
border

--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -84,7 +84,6 @@ li.preview a {
     color: $dark-grey;
     font-size: $font-small;
     background-color: $comment-color;
-    width: 443px;
   }
 
   .comment-avatar {
